# ros2-mur5e-mobile-manipulator-stack

./: LAUNCH.md  LICENSE  README.md  run_pick_place_mission.sh
src/base_placement_optimizer/: ARCHITECTURE.md  CMakeLists.txt  README.md  consise_description.md  package.xml
src/base_placement_optimizer/action/: OptimizePlacement.action
src/base_placement_optimizer/include/base_placement_optimizer/: optimizer_node.hpp
src/base_placement_optimizer/launch/: optimizer.launch.py  optimizer_demo.launch.py
src/base_placement_optimizer/scripts/: run_task.py
src/base_placement_optimizer/src/: optimizer_node.cpp
src/base_placement_optimizer/test/: test_optimizer.cpp
src/mir_description/: CMakeLists.txt  consise_description.md  package.xml
src/mir_description/launch/: display.launch.py
src/mir_description/urdf/: mir.urdf.xacro
src/mir_description/urdf/sensors/: imu.xacro  realsense_d435.xacro  sick_lidar.xacro
src/mobile_manipulator_description/: CMakeLists.txt  consise_description.md  package.xml
src/mobile_manipulator_description/config/: ur5e_joint_limits.yaml
src/mobile_manipulator_description/launch/: display.launch.py  gazebo.launch.py
src/mobile_manipulator_description/rviz/: display.rviz
src/mobile_manipulator_description/urdf/: mobile_manipulator.gazebo.xacro  mobile_manipulator.urdf.xacro
src/mobile_manipulator_gazebo/: CMakeLists.txt  consise_description.md  package.xml
src/mobile_manipulator_gazebo/config/: gazebo_controllers.yaml  gazebo_gui.config  mapper_params_online_async.yaml  slam.rviz
src/mobile_manipulator_gazebo/launch/: simulation.launch.py  slam_mapping.launch.py
src/mobile_manipulator_gazebo/maps/: simple_maze.pgm  simple_maze.yaml
src/mobile_manipulator_gazebo/scripts/: monitor_joints.py  save_map.sh  test_gripper.py  test_movement.py
src/mobile_manipulator_gazebo/worlds/: nav_workspace.sdf  simple_maze.sdf  testing_world.sdf
src/mobile_manipulator_moveit_config/: CMakeLists.txt  consise_description.md  package.xml
src/mobile_manipulator_moveit_config/config/: fake_controllers.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  mobile_manipulator.srdf  mobile_manipulator.urdf.xacro  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  pilz_industrial_motion_planner_planning.yaml  ros2_controllers.yaml  sensors_3d.yaml
src/mobile_manipulator_moveit_config/launch/: demo.launch.py  move_group.launch.py  rviz.launch.py  spawn_controllers.launch.py
src/mobile_manipulator_moveit_config/test/: test_sensors_yaml.py
src/mobile_manipulator_nav/: CMakeLists.txt  consise_description.md  package.xml
src/mobile_manipulator_nav/config/: nav2_params.yaml
src/mobile_manipulator_nav/config/behavior_trees/: navigate_w_replanning_and_recovery.xml
src/mobile_manipulator_nav/launch/: nav2_no_collision_monitor.launch.py  nav_bringup.launch.py  navigation.launch.py
src/mobile_manipulator_nav/rviz/: nav2_default_view.rviz
src/mobile_manipulator_nav/scripts/: arm_state_monitor.py
src/mobile_manipulator_nav/src/: is_arm_stowed_condition.cpp
src/mobile_manipulator_nav/test/: test_navigation_launch.py
src/mobile_manipulator_slam/: CMakeLists.txt  consise_description.md  package.xml
src/mobile_manipulator_slam/config/: mapper_params_online_async.yaml  slam.rviz
src/mobile_manipulator_slam/launch/: slam_mapping.launch.py
src/mobile_manipulator_slam/maps/: nav_workspace.pgm  simple_maze.pgm  simple_maze.yaml
src/mobile_manipulator_slam/scripts/: generate_nav_workspace_map.py  nav_workspace.pgm  nav_workspace.yaml
src/pick_place_orchestrator/: CMakeLists.txt  README_MISSION.md  consise_description.md  package.xml
src/pick_place_orchestrator/action/: PickPlaceMission.action
src/pick_place_orchestrator/behavior_trees/: pick_place_mission.xml
src/pick_place_orchestrator/include/pick_place_orchestrator/: behavior_tree_engine.hpp  behavior_tree_nodes.hpp  orchestrator_node.hpp
src/pick_place_orchestrator/launch/: orchestrator.launch.py  pick_place_mission.launch.py  validation.launch.py
src/pick_place_orchestrator/src/: behavior_tree_engine.cpp  mission_trigger_node.cpp  orchestrator_node.cpp
src/pick_place_orchestrator/src/behavior_tree_nodes/: check_pose_condition.cpp  gripper_control_action.cpp  move_arm_action.cpp  navigate_to_pose_action.cpp  optimize_pose_action.cpp  payload_actions.cpp  target_acquisition.cpp  visual_servo_action.cpp
src/pick_place_orchestrator/test/: test_cartesian_constraints.cpp  test_deterministic_joint_space.cpp  test_end_to_end_mission.cpp  test_failure_recovery.cpp  test_payload_attachment.cpp  test_pick_isolation.cpp  test_planning_fallback.cpp
src/ur_description/: CMakeLists.txt  consise_description.md  package.xml
src/ur_description/config/moveit/: kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  ur5e.srdf
src/ur_description/config/ur5/: joint_limits.yaml
src/ur_description/config/ur5e/: joint_limits.yaml
src/ur_description/launch/: pick_place_demo.launch.py  pick_place_demo_interactive.launch.py  view_ur.launch.xml
src/ur_description/rviz/: pick_place_demo.rviz  pick_place_interactive.rviz
src/ur_description/test/: test_ur_urdf_xacro.py  test_view_ur_launch.py
src/ur_description/urdf/: ur.urdf.xacro  ur_mocked.urdf.xacro
